refactor: user service dependency of auth service
